<resources>
    <string name="app_name">Education Loan Calculator</string>
    <string name="text_loan_calculator">Loan Calculator</string>
    <string name="text_result_app_bar">Payment Details</string>
    <string name="text_view_history">View History</string>
    <string name="welcome_text">Welcome Back!</string>
    <string name="welcome_sub_text">Calculation at your Finger Tips</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="interest_rate_text">Interest Rate</string>
    <string name="loan_term">Loan Term</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="totalPayment">Payment</string>
    <string name="totalInterest">Interest</string>
    <string name="loanAmount">Loan</string>
    <string name="term_period_text">Term Period</string>
    <string name="rate_for_text">Rate Per</string>
    <string name="icon_calculator">Calculate</string>
    <string name="paymentOverview">Payment Overview</string>
    <string name="footer_text_kumary">IT17168250 | Sirikumara G.A.K.P</string>
    <string name="footer_text_uthpala">IT17171366 | Bandara H.M.U.I</string>
    <string name="footer_both">IT17168250 | IT17171366</string>
    <string name="date_text">Date</string>
    <string name="history_app_bar_text">Calculation History</string>
</resources>