<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/custom_app_bar">

            <TextView
                android:id="@+id/app_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/play_regular"
                android:text="@string/app_name"
                android:textColor="@color/white_dull"
                android:textSize="27sp" />
            <TextView
                android:id="@+id/welcome_txt"
                android:layout_below="@+id/app_name_txt"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textSize="20sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/play_regular"
                android:textColor="@color/white_dull"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <ScrollView
            android:id="@+id/scrollViewContainerHome"
            android:layout_below="@+id/app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <GridLayout
                    android:columnCount="1"
                    android:rowCount="2"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="200dp">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/calculatorNavigatorBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:src="@drawable/ic_calculator_2"
                                android:layout_width="120dp"
                                android:layout_height="120dp" />
                            <TextView
                                android:layout_marginTop="12dp"
                                android:textSize="18sp"
                                android:text="@string/text_loan_calculator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/historyNavigatorBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:src="@drawable/ic_history_home"
                                android:layout_width="120dp"
                                android:layout_height="120dp" />
                            <TextView
                                android:layout_marginTop="12dp"
                                android:textSize="18sp"
                                android:text="@string/text_view_history"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/footer_both"
                    android:gravity="center"
                    android:paddingBottom="10dp">

                </TextView>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>