<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/loader_calculator"
            style="@style/SpinKitView.Large.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
        <RelativeLayout
            android:id="@+id/app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/custom_mini_app_bar">
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"
                android:background="?android:attr/selectableItemBackground">

            </ImageButton>
            <TextView
                android:id="@+id/appBarName"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_loan_calculator"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:autoSizeTextType="uniform"
                android:layout_centerVertical="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <ScrollView
            android:id="@+id/scrollViewContainer"
            android:layout_below="@+id/app_bar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/content_container"
                android:layout_below="@+id/app_bar_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <GridLayout
                    android:columnCount="1"
                    android:rowCount="4"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="200dp">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/loanAmountView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <RelativeLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:src="@drawable/ic_loan_amount"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerVertical="true"/>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/loanAmountEditTextLayout"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginLeft="50dp"
                                android:layout_centerVertical="true"
                                android:hint="@string/loan_amount"
                                app:endIconMode="clear_text"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/loanAmountEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="numberDecimal"
                                    android:fontFamily="@font/play_regular"
                                    />

                            </com.google.android.material.textfield.TextInputLayout>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/interestRateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <RelativeLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:src="@drawable/ic_interest_rate"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"/>
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/interestRateEditTextLayout"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginLeft="50dp"
                                android:layout_alignParentTop="true"
                                android:hint="@string/interest_rate"
                                app:endIconMode="clear_text"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/interestRateEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="numberDecimal"
                                    android:fontFamily="@font/play_regular"
                                    />

                            </com.google.android.material.textfield.TextInputLayout>
                            <TextView
                                android:layout_below="@+id/interestRateEditTextLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="55dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/rate_for_text"
                                android:textSize="20dp">
                            </TextView>
                            <com.jaredrummler.materialspinner.MaterialSpinner
                                android:id="@+id/iRateSpinner"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginLeft="180dp"
                                android:textAlignment="center"
                                android:layout_below="@+id/interestRateEditTextLayout"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/loanTermView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">
                        <RelativeLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:src="@drawable/ic_loan_term"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"/>
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/loanTermEditTextLayout"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginLeft="50dp"
                                android:layout_alignParentTop="true"
                                android:hint="@string/loan_term"
                                app:endIconMode="clear_text"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/loanTermEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:inputType="number"
                                    android:fontFamily="@font/play_regular"/>

                            </com.google.android.material.textfield.TextInputLayout>
                            <TextView
                                android:layout_below="@+id/loanTermEditTextLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="55dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/term_period_text"
                                android:textSize="20dp">
                            </TextView>
                            <com.jaredrummler.materialspinner.MaterialSpinner
                                android:id="@+id/spinner"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginLeft="180dp"
                                android:textAlignment="center"
                                android:layout_below="@+id/loanTermEditTextLayout"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/calculateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp">

                        <Button
                            android:id="@+id/calculateSubmit"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@color/colorPrimary"
                            android:text="@string/icon_calculator"
                            android:textSize="20dp"
                            android:textColor="@color/white"></Button>
                    </androidx.cardview.widget.CardView>

                </GridLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/footer_text_kumary"
                    android:gravity="center"
                    android:paddingBottom="10dp">

                </TextView>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>